--- a/LNCT.html
+++ b/LNCT.html
@@ -66,7 +66,9 @@
             <div class="container">
                 <p>
                     Born in semi urban city of Bilaspur (C.G.),Shri Jai Narayan Chouksey, completed his post graduation from Robertson College, Jabalpur. He established Lakshmi Narain College of Technology (LNCT), Bhopal in 1994 under the banner of H.K. Kalchuri Education Trust. Since then, With the commitment of <strong>"Working Towards Being the Best"</strong>, LNCT Group has achieved many milestones. The institute is successfully meeting the objective of producing skilled manpower of the highest quality who is able to cope up with the challenges of ever evolving industrial needs of the country.The Alumni of LNCT Group are across the Globe in Big Multi National Companies.
-                </p>
+                </p><br>
+                <p>Today, LNCT Group is one of the Largest and most preferred Educational Group for Engineering, Management, Pharmacy, Medical with ISO-9001 certification and NBA accreditation for many Engineering courses.. Bright young students from all across the country are coming to fulfill their dream in this group.</p><br>
+                <p>The LNCT Campus at Bhopal is spread over a lush green environment of approx. 50 acres. The campus constitutes of many buildings that houses the academics and research centers. In addition to this, the academic building has tutorial rooms, lecture halls, computer and electronics labs and offices of the administrations and faculty. The campus is fully equipped with facilities like Wi-Fi,central library (digital library, Internet lab), digital classrooms, hostel, mess,Central workshop, Auditorium Sports Ground etc.</p>
             </div>
         </section>
     </main>
